color contrast fix

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -1,4 +1,5 @@
 /* ADD HAMBURGER MENU */
+/* RECHECK AUTIT/RUBRIC */
 
 :root {
     font-family: Roboto, Arial, sans-serif;
@@ -59,7 +60,7 @@ h1 {
 }
 
 footer {
-    background-color: var(--primary-color);
+    background-color: var(--accent-color);
     text-align: center;
     padding: 5px;
     font-size: 18px;
